# BallsTrack

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  ReadMe.md  blenderScript.py  main.py  npDemo.py  requirements.txt
.github/workflows/: python-app.yml
benchmark/: __init__.py
cameraData/Live_1/: camera_matrix.npy  dist_coeffs.npy
cameraData/k2_1/: camera_matrix.npy  dist_coeffs.npy
camlib/: __init__.py  camera.py  cameraSettings.py  cvk2Camera.py  k2Camera.py  multiCamera.py  nik2Camera.py  webCamera.py
cfglib/: __init__.py
configs/: base.json
demos/: calibration.py  camera_matrix.npy  camtest.py  createMarkers.py  dist_coeffs.npy  freenect.c  freenect.pyx  main.py  setup.py  testSendToBlender.py  testopenvr.py
docs/installation/: ReadMe.md
gamelib/: __init__.py
src/: main.cpp
test/: cfg_test.py
tracklib/: __init__.py  aruco.py  triangulation.py  utils.py  xrtrack.py
